@@ -87,6 +87,9 @@ rm -rf %{buildroot}
 %{vimdatadir}/syntax/groupsconf.vim
 
 %changelog
+* Thu Jun 09 2011 Stephane Thiell <stephane.thiell@cea.fr> 1.5.1-1
+- update to 1.5.1
+
 * Wed Jun 08 2011 Stephane Thiell <stephane.thiell@cea.fr> 1.5-1
 - update to 1.5
 
