@@ -46,9 +46,9 @@ Please see first:
   - ClusterShell.Task
 """
 
-__version__ = '1.5'
+__version__ = '1.5.1'
 __version_info__ = tuple([ int(_n) for _n in __version__.split('.')])
-__date__    = '2011/06/08'
+__date__    = '2011/06/09'
 __author__  = 'Stephane Thiell <stephane.thiell@cea.fr>'
 __url__     = 'http://clustershell.sourceforge.net/'
 
