@@ -1,3 +1,8 @@
+2011-06-09 S. Thiell <stephane.thiell@cea.fr>
+
+	* NodeSet.py: Added workaround to allow pickling/unpickling of RangeSet
+	objects for Python 2.4 (ticket #156).
+
 2011-06-08 S. Thiell <stephane.thiell@cea.fr>
 
 	* Version 1.5 released (Sedona release).
